--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Religions'
 - !lcc 'BL'
+- GITenberg
 title: 'The Lords of the Ghostland: A History of the Ideal'
 url: http://www.gutenberg.org/ebooks/31608
